# clean_cli

./: .gitignore  Cargo.toml  LICENCE-APACHE.md  LICENSE-MIT.md  README.md  changelog.md
src/: cli.rs  command.rs  context.rs  error.rs  lib.rs  parameter.rs  tests.rs  traits.rs
