[package]
name = "clean_cli"
version = "0.1.1"
authors = ["Trubnikov Sergey <bugrazoid@yandex.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bugrazoid/clean_cli"
repository = "https://github.com/bugrazoid/clean_cli"
description = "In programm command line parser using for repl"
keywords = ["cli", "repl", "command"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"
